<?xml version="1.0" encoding="UTF-8"?>
<!--
    Copyright (C) 2003-2015 eXo Platform SAS.

    This is free software; you can redistribute it and/or modify it
    under the terms of the GNU Lesser General Public License as
    published by the Free Software Foundation; either version 2.1 of
    the License, or (at your option) any later version.

    This software is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
    Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public
    License along with this software; if not, write to the Free
    Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
    02110-1301 USA, or see the FSF site: http://www.fsf.org.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.bluebook.intranet</groupId>
  <artifactId>bluebook-intranet-extension</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <name>Bluebook Extension</name>
  <packaging>pom</packaging>
  <description>Bluebook Extension</description>
  <properties>
    <org.exoplatform.platform.version>4.2.0</org.exoplatform.platform.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.exoplatform.platform</groupId>
        <artifactId>platform</artifactId>
        <version>${org.exoplatform.platform.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <modules>
    <module>config</module>
    <module>war</module>  
  </modules>
  <build>
    <pluginManagement>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <configuration>
                  <argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
                  <systemPropertyVariables>
                      <org.apache.commons.logging.Log>org.apache.commons.logging.impl.SimpleLog</org.apache.commons.logging.Log>
                      <org.apache.commons.logging.simplelog.defaultlog>info</org.apache.commons.logging.simplelog.defaultlog>
                      <org.apache.commons.logging.simplelog.log.org.exoplatform>debug</org.apache.commons.logging.simplelog.log.org.exoplatform>
                      <org.apache.commons.logging.simplelog.log.net.hibernate>warn</org.apache.commons.logging.simplelog.log.net.hibernate>
                      <java.naming.factory.initial>org.exoplatform.services.naming.SimpleContextFactory</java.naming.factory.initial>
                      <java.util.logging.config.class>org.exoplatform.component.test.logging.LogConfigurator</java.util.logging.config.class>
                      <exo.profiles>hsqldb</exo.profiles>
                      <!--needed for test-->
                      <gatein.test.output.path>${project.build.directory}</gatein.test.output.path>
                      <ObjectStoreEnvironmentBean.objectStoreDir>${project.build.directory}/dir1</ObjectStoreEnvironmentBean.objectStoreDir>
                      <com.arjuna.ats.arjuna.objectstore.objectStoreDir>${project.build.directory}/dir2</com.arjuna.ats.arjuna.objectstore.objectStoreDir>
                  </systemPropertyVariables>
              </configuration>
          </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.0</version>
          <configuration>
            <source>1.7</source>
            <target>1.7</target>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
